# mithr_airport

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  main.py  session_store.py  test.py
src/a2f/: dev.py  nim_a2f_3d_client.py
src/a2f/a2f_3d/client/: auth.py  service.py
src/conf/: fields.json  flights.json  mock.json  output.json
src/misc/: visualise.py
src/models/: chatmodel.py  userstate.py
src/nodes/: node_functions.py  routes.py
src/routes/: nvidiaa2f.py
src/utils/: executor.py  helper.py  small_talk.py  stt.py  tts.py  vlm_extraction.py
